project/logs/20250625_172248.log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3d.VS.hlsl,profike:vs_6_0

Compile Succeeded, path:Object3d.VS.hlsl, profike:vs_6_0
 
Begin CompileShader,path:Object3d.PS.hlsl,profike:ps_6_0

Object3d.PS.hlsl:46:53: error: use of undeclared identifier 'gDirecionalLight'
        float NdotL = dot(normalize(input.normal), -gDirecionalLight.direction);
                                                    ^
Object3d.PS.hlsl:51:15: error: redefinition of 'cos'
        float cos = pow(NdotL * 0.5f + 0.5f, 2.0f);
              ^
Object3d.PS.hlsl:48:15: note: previous definition is here
        float cos = saturate(dot(normalize(input.normal), -gDirectionalLight.direction));
              ^

